Pass class and fix lazy load element height
- Able to pass any other class from select to new dropdown button
- Some lazy loading menu item height was 0 and menu size was too small, now it has a fallback.

--- a/src/style.scss
+++ b/src/style.scss
@@ -24,6 +24,7 @@
         background-color: $ezmodus-dropdown-background-color;
         width: $ezmodus-dropdown-width;
         padding: $ezmodus-dropdown-padding;
+        justify-content: space-between;
         cursor: pointer;
         .text {
             padding: $ezmodus-dropdown-text-padding;
